--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -88,11 +88,11 @@
                     <a class="nav-link" href="#">Challanges <span class="sr-only">(current)</span></a>
                 </li>
                 {% if current_user.is_authenticated %}
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" id = 'dropdown-toggler'>
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         {{ current_user.username }}
-                        </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" id = 'dropdown-menu'>
                         <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
                     </ul>
                 </li>
