--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -82,10 +82,10 @@
     
             <ul class="navbar-nav ml-auto nav-fill w-100">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Create Challenge <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('create_game') }}">Create Challenge <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Challanges <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="">Challanges <span class="sr-only">(current)</span></a>
                 </li>
                 {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown" id = 'dropdown-toggler'>
