--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4pics1word | Play Game</title>
+    <script> const answer = "{{ answer }}"; </script>
     <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -86,18 +87,18 @@
         <div>
             <div class="row">
               <div class="col-6 image-cell" id = 'img1'>
-                <img src="/get_image/1/1" alt="Duck">
+                <img src="" alt="Duck">
               </div>
               <div class="col-6 image-cell" id = 'img2'>
-                <img src="/get_image/1/2" alt="Duck">
+                <img src="" alt="Duck">
               </div>
             </div>
             <div class="row">
               <div class="col-6 image-cell" id = 'img3'>
-                <img src="/get_image/1/3" alt="Duck">
+                <img src="" alt="Duck">
               </div>
               <div class="col-6 image-cell" id = 'img4'>
-                <img src="/get_image/1/4" alt="Duck">
+                <img src="" alt="Duck">
               </div>
             </div>
           </div>
@@ -130,4 +131,5 @@
     </div>
     
 </body>
+
 </html>
