--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -87,18 +87,18 @@
         <div>
             <div class="row">
               <div class="col-6 image-cell" id = 'img1'>
-                <img src="" alt="Duck">
+                <img src="{{ image1 }}" alt="Duck">
               </div>
               <div class="col-6 image-cell" id = 'img2'>
-                <img src="" alt="Duck">
+                <img src="{{ image2 }}" alt="Duck">
               </div>
             </div>
             <div class="row">
               <div class="col-6 image-cell" id = 'img3'>
-                <img src="" alt="Duck">
+                <img src="{{ image3 }}" alt="Duck">
               </div>
               <div class="col-6 image-cell" id = 'img4'>
-                <img src="" alt="Duck">
+                <img src="{{ image4 }}" alt="Duck">
               </div>
             </div>
           </div>
