--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/challenge-board.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -19,48 +20,6 @@
         .form-control.is-invalid, .was-validated .form-control:invalid {
             background-image: none;
         }
-
-        /* Styling for trending/popular cards */
-
-                    .card {
-                        height: 300px;
-                    }
-
-                    .card-img-top {
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                    .card-img-overlay {
-                        background-color: rgba(0,0,0,0.5);
-                        color: white;
-                        display:flex;
-                        flex-direction: column;
-                        justify-content: end;
-                        height: 100%;
-                    }
-                    
-                    /* Challnge board styling*/
-                    .challenge {
-                        padding: 10px;
-                        border: 1px solid #ccc;
-                        border-radius: 5px;
-                        margin-bottom: 10px;
-                    }
-
-                    .challenge h2 {
-                        margin-top: 0;
-                    }
-
-                    .challenge p:last-child {
-                        font-style: italic;
-                        color: #888;
-                    }
-
-                    .card-body {
-                        &:hover {
-                            background-color: #f1f1f1;
-                        }
-                    }
     </style>
 </head>
 
@@ -182,12 +141,11 @@
     </div>
 
     <!-- Trending Cards -->
-    <div class="container mt-4">
-        <h3>Trending Posts</h3>
-        <div class="row">
+    <div class="container mt-4 trending-posts">
+        <div class="row d-none d-md-flex">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://images.pexels.com/photos/3225517/pexels-photo-3225517.jpeg" class="card-img-top" alt="UWA Lecturers">
+                    <img src="https://th.bing.com/th/id/OIG2.kAM76N3zv6KJ4sHKHNeX?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Can you guess this X word challenge?</h5>
                         <p class="card-poster">Posted by User</p>
@@ -196,7 +154,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://th.bing.com/th/id/OIG2.lQsvubxxkb50Tpn7rZXN?w=1024&h=1024&rs=1&pid=ImgDetMain" class="card-img-top" alt="UWA Lecturers">
+                    <img src="https://th.bing.com/th/id/OIG4..bmL9kK4Y8Eia8wscYkm?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Can you guess this X word challenge?</h5>
                         <p class="card-poster">Posted by User</p>
@@ -205,7 +163,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://th.bing.com/th/id/OIG2.lQsvubxxkb50Tpn7rZXN?w=1024&h=1024&rs=1&pid=ImgDetMain" class="card-img-top" alt="UWA Lecturers">
+                    <img src="https://th.bing.com/th/id/OIG2.JlguCKuxIwpAyn85zNU5?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Can you guess this X word challenge?</h5>
                         <p class="card-poster">Posted by User</p>
@@ -214,7 +172,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="https://th.bing.com/th/id/OIG2.lQsvubxxkb50Tpn7rZXN?w=1024&h=1024&rs=1&pid=ImgDetMain" class="card-img-top" alt="UWA Lecturers">
+                    <img src="https://th.bing.com/th/id/OIG3.Qki63p2XR0ADHBtUrUp4?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Can you guess this X word challenge?</h5>
                         <p class="card-poster">Posted by User</p>
@@ -222,31 +180,101 @@
                 </div>
             </div>
         </div>
+
+        <!-- Horizontal scroll for smaller screens -->
+        <div class="d-md-none d-flex flex-row flex-nowrap overflow-auto">
+            <div class="card" style="min-width: 80%; margin-right: 20px;">
+                <img src="https://th.bing.com/th/id/OIG2.kAM76N3zv6KJ4sHKHNeX?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Can you guess this X word challenge?</h5>
+                    <p class="card-poster">Posted by User</p>
+                </div>
+            </div>
+            <div class="card" style="min-width: 80%; margin-right: 20px;">
+                <img src="https://th.bing.com/th/id/OIG4..bmL9kK4Y8Eia8wscYkm?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Can you guess this X word challenge?</h5>
+                    <p class="card-poster">Posted by User</p>
+                </div>
+            </div>
+            <div class="card" style="min-width: 80%; margin-right: 20px;">
+                <img src="https://th.bing.com/th/id/OIG2.JlguCKuxIwpAyn85zNU5?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Can you guess this X word challenge?</h5>
+                    <p class="card-poster">Posted by User</p>
+                </div>
+            </div>
+            <div class="card" style="min-width: 80%; margin-right: 20px;">
+                <img src="https://th.bing.com/th/id/OIG3.Qki63p2XR0ADHBtUrUp4?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="card-img-top" alt="Image">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Can you guess this X word challenge?</h5>
+                    <p class="card-poster">Posted by User</p>
+                </div>
+            </div>
+        </div>
     </div>
 
-
-    <div class="container">
-        <h1>Challenge Board</h1>
-        <div class="row">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
+    <!-- Challenge Board -->
+    <div class="container mt-4 col-md-10 challenge-board">
+        <div class="col-md-12 mt-2 mb-4 card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="card-title">Challenge Title</h3>
                         <p class="card-text"><small class="text-muted">Posted by: user</small></p>
-                        <h5 class="card-title">Challenge Title</h5>
-                        <p class="card-text">Challenge Description</p>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG2.kAM76N3zv6KJ4sHKHNeX?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 1">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG4..bmL9kK4Y8Eia8wscYkm?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 2">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG2.JlguCKuxIwpAyn85zNU5?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 3">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG3.Qki63p2XR0ADHBtUrUp4?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 4">
+                            </div>
+                        </div>
                         <div class="d-flex gap-2">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">0 Likes</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">0 Likes</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">0 Shares</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Example second card-->
+        <div class="col-md-12 mb-4 card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="card-title">Challenge Title</h3>
+                        <p class="card-text"><small class="text-muted">Posted by: user</small></p>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG2.kAM76N3zv6KJ4sHKHNeX?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 1">
                             </div>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">0 Shares</button>
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG4..bmL9kK4Y8Eia8wscYkm?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 2">
                             </div>
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG2.JlguCKuxIwpAyn85zNU5?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 3">
+                            </div>
+                            <div class="col-md-3">
+                                <img src="https://th.bing.com/th/id/OIG3.Qki63p2XR0ADHBtUrUp4?w=270&h=270&c=6&r=0&o=5&dpr=1.5&pid=ImgGn" class="img-fluid" alt="Image 4">
+                            </div>
+                        </div>
+                        <div class="d-flex gap-2">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">0 Likes</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">0 Shares</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
     <script>
   
         $('.search-box input').focus(function() {
