to avoid repeated and very long code, repeated HTML elements such as the login modals and navbar and such should be placed in the /templates/html_components directory as re-usable html components, they can then be included using Jinja include statements

--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -32,89 +32,7 @@
         Register
     </button>
     
-    <!-- Modal Login-->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" id = 'close-button-auth-popup'>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-                      </svg>
-                </button>
-                <div class="wrapper">
-                    <form id = 'login-form' novalidate class = 'needs-validation'>
-                        <h1>Login</h1>
-                        <div class="username-container input-box">
-                            <input type="text" id = 'username-login' placeholder="Username" class = 'form-control' name="username" required>
-                            <i class="bi bi-person-fill"></i>
-                            <div id = 'login-username-error' class = 'invalid-feedback'>Required field</div>
-                        </div>
-                        <div class="password-container input-box">
-                            <input type="password" id = 'password-login' placeholder="Password" class = 'form-control' name="password" required>
-                            <i class="bi bi-key-fill"></i>
-                            <div id = 'login-password-error' class = 'invalid-feedback'>Required field</div>
-                        </div>
-            
-                        <button type="submit" class="btn">Login</button>
-            
-                        <div class="register-link">
-                            <p>Don't have an account? <a data-bs-toggle="modal" data-bs-target="#registerModal" href = ''>Register</a></p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        </div>
-    </div>
-
-
-    <!-- Modal Register-->
-    <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close" id = 'close-button-auth-popup'>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-                      </svg>
-                </button>
-                <div class="wrapper">
-                    <form id = 'register-form' novalidate class = 'needs-validation'>
-                        <h1>Register</h1>
-                        <div class="input-box">
-                            <input type="text" id = 'username-register' class = 'form-control' placeholder="Username" name="username"
-                            required>
-                            <i class="bi bi-person-fill"></i>
-                            <div id = 'register-username-error' class = 'invalid-feedback'>Required field</div>
-                        </div>
-                        <div class="input-box">
-                            <input type="password" id = 'password-register' class = 'form-control' placeholder="Password" name="password" required>
-
-                            <i class="bi bi-key-fill"></i>
-                            <div id = 'register-password-error' class = 'invalid-feedback'>Required field</div>
-                        </div>
-                        <div class="input-box">
-                            <input type="password" id = 'password-confirm-register' class = 'form-control' placeholder="Confirm Password" name="confirmPassword" required>
-                            <i class="bi bi-key-fill"></i>
-                            <div id = 'register-password-confirm-error' class = 'invalid-feedback'>Required field</div>
-                        </div>
-            
-                        
-            
-                        <button type="submit" class="btn">Register</button>
-            
-                        <div class="Login-link">
-                            <p>Already have an account? <a data-bs-toggle="modal" data-bs-target="#loginModal" href = ''>Login</a></p>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        </div>
-    </div>
+    {% include "/html_components/auth_modal.html" %}
     
 </body>
 </html>
