made changes to the nav-bar css by adding styling for .nav-link[aria-current] and some javascript code as well for active nav-links, made the navbar sticky, finally added a linear gradient for challenge-board

--- a/4pics1word/static/css/nav-bar.css
+++ b/4pics1word/static/css/nav-bar.css
@@ -114,3 +114,11 @@ i{
 .dropdown-menu show{
     right: 2vw !important;
 }
+
+.nav-link[aria-current="page"]{
+    text-decoration: underline;
+    text-underline-offset: 7px;
+    text-decoration-thickness: 2px;
+    text-decoration-color: purple;
+    
+}
