--- a/4pics1word/static/css/challenge-board.css
+++ b/4pics1word/static/css/challenge-board.css
@@ -1,7 +1,11 @@
 body {
-    background-image: linear-gradient(140deg, rgba(204, 42, 229, 0.4), rgba(190, 118, 212, 0.4), rgba(18, 8, 203, 0.4));
-    animation: gradient 5s infinite;
-    background-size: 400% 400%;
+    /* background-image: linear-gradient(140deg, rgba(204, 42, 229, 0.4), rgba(190, 118, 212, 0.4), rgba(18, 8, 203, 0.4)); */
+    /* animation: gradient 5s infinite; */
+    /* background-size: 400% 400%; */
+    background-image: radial-gradient( circle farthest-corner at 14.2% 27.5%,  rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90% );
+    /* background-image: linear-gradient( 180deg,  rgba(144,254,229,1) -17.1%, rgba(91,193,239,1) 40.4%, rgb(128, 96, 196) 115.3% ); */
+    /* background-color: rgb(130, 112, 245)!important; */
+    /* background-image: linear-gradient( 111.5deg,  rgb(82, 84, 208) -7.2%, rgb(112, 49, 111) 100.2% ); */
 }
 
 @keyframes gradient {
