--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="{{url_for('index')}}">4Pics1Word</a>
     
     
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="{{ url_for('create_game') }}">Create Challenge <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Challanges <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" aria-current="page" href="">Challanges <span class="sr-only">(current)</span></a>
                 </li>
                 {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown" id = 'dropdown-toggler'>
@@ -295,6 +295,14 @@
       $('.search-box input').blur(function() {
           $(this).parent().parent().css('width', '36vw');  
       });
+
+        document.querySelectorAll('.nav-link').forEach(
+            link=>{
+                if(link.href == window.location.href){
+                    link.setAttribute('aria-current','page')
+                }
+            }
+        )
       
       </script>
     </body>
