--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -237,16 +237,24 @@
                                 <p class="card-text"><small class="text-muted">Posted by: {{ game.creator.username }}</small></p>
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="{{ game.image1 }}" class="img-fluid" alt="Image 1">
+                                        <div class="image-wrapper-box">
+                                            <img src="{{ game.image1 }}" alt="Image 1">
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="{{ game.image2 }}" class="img-fluid" alt="Image 2">
+                                        <div class="image-wrapper-box">
+                                            <img src="{{ game.image2 }}" alt="Image 2">
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="{{ game.image3 }}" class="img-fluid" alt="Image 3">
+                                        <div class="image-wrapper-box">
+                                            <img src="{{ game.image3 }}" alt="Image 3">
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        <img src="{{ game.image4 }}" class="img-fluid" alt="Image 4">
+                                        <div class="image-wrapper-box">
+                                            <img src="{{ game.image4 }}" alt="Image 4">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="d-flex gap-2">
