made a few modification to challenge-board.html, main.py and index.html firstly if the user is not signed in and tries to progress to create-game page then the login modal will show up on index.html instead of an erro page, secondly when the user is at the challenges page and  tries to access the create-game page through the navlinks without loggin in login modal would show up again this was done through some simple jinja statements

--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -40,12 +40,24 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" style="margin-left: 2vw;">
     
             <ul class="navbar-nav ml-auto nav-fill w-100">
+                {% if current_user.is_authenticated %} <!-- user can only create a game if they are signed in otherwise, login modal is displayed-->
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('create_game') }}">Create Challenge <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="">Challanges <span class="sr-only">(current)</span></a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#loginModal" href="#">Create Challenge <span class="sr-only">(current)</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="">Challanges <span class="sr-only">(current)</span></a>
+                </li>
+    
+                {% endif %}
+                
                 {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown" id = 'dropdown-toggler'>
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
