--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
     <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
 
     <style>
@@ -22,15 +23,15 @@
     <title>Document</title>
 </head>
 <body>
-
+    {% include "/html_components/navbar.html" %}
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
         Login
-    </button>
+    </button> -->
 
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registerModal">
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registerModal">
         Register
-    </button>
+    </button> -->
     
     {% include "/html_components/auth_modal.html" %}
     <script>
