--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -31,24 +31,44 @@ input[type="file"] {
     border-bottom: 3px solid black; /* Underline effect */
 }
 
+.game-container {
+    display: flex;
+    /* flex-direction: row; */
+    position: relative;
+}
+
+.hint {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    max-height: 40vh; /* Set min-height to 100vh for full viewport height */
+    padding-left: 10vw; /* Left padding for positioning */
+  }
+
 .images-content {
     margin-top: 90px;
+    justify-content: center;
+    align-items: center;
+    width: 250vh;
+    /* position: relative; */
+}
+
+.image-cell img {
+    aspect-ratio: 1; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
 }
 
 .image-cell {
-    width: 180px;
-    height: 180px;
-    background-color: #333;
-    padding: 0;
-    border-radius: 10px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 8px;
-    position: relative;
+    min-width: 180px;
+    max-width: 200px;
+    padding: 8px;
 }
+
+
 
 .change-img-icon {
     position: absolute;
@@ -75,7 +95,62 @@ label {
     color: white
 }
 
-.image-cell img {
-    max-width: 100%;
-    height: auto;
+.flex-container{
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 40vw;
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
+
+.letter-input {
+    text-align: center; 
+    border: 3px solid white; 
+    width: 65px; 
+    height: 75px; 
+    padding: 10px; 
+    margin: 5px; 
+    outline: none; 
+    background-color: transparent;
+    font-size: 30px;
+    color: white;
+}
+
+.spacer {
+    width: 30px; 
+    height: 20px; 
+    display: block; 
+    text-align: center;
+}
+
+.incorrect-input {
+    text-align: center; 
+    border: 3px solid red; 
+    width: 65px; 
+    height: 75px; 
+    padding: 10px; 
+    margin: 5px; 
+    outline: none; 
+    background-color: transparent;
+    font-size: 30px;
+    color: white;
+}
+
+.correct-input {
+    text-align: center; 
+    border: 4px solid lawngreen; 
+    width: 65px; 
+    height: 75px; 
+    padding: 10px; 
+    margin: 5px; 
+    outline: none; 
+    background-color: transparent;
+    font-size: 30px;
+    color: white;
 }
