--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -4,105 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4pics1word | Play Game</title>
-    <script> const answer = "{{ answer }}"; </script>
+    <script> const answer = "{{ answer }}"; const challenge_id = "{{ challenge_id }}"; let attempt = "{{ attempt_count }}"; const message = "{{ message }}";</script>
     <script defer src="{{ url_for('static', filename='js/game-attempt.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
     <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
 </head>
-
-<style>
-    .flex-container{
-        display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      width: 40vw;
-    }
-
-    .input-container {
-      position: relative;
-      width: 100%;
-      text-align: center;
-    }
-
-    .letter-input {
-        text-align: center; 
-        border: 3px solid white; 
-        width: 65px; 
-        height: 75px; 
-        padding: 10px; 
-        margin: 5px; 
-        outline: none; 
-        background-color: transparent;
-        font-size: 30px;
-        color: white;
-    }
-
-    .spacer {
-        width: 30px; 
-        height: 20px; 
-        display: block; 
-        text-align: center;
-    }
-
-    .incorrect-input {
-        text-align: center; 
-        border: 3px solid red; 
-        width: 65px; 
-        height: 75px; 
-        padding: 10px; 
-        margin: 5px; 
-        outline: none; 
-        background-color: transparent;
-        font-size: 30px;
-        color: white;
-    }
-
-    .correct-input {
-        text-align: center; 
-        border: 4px solid lawngreen; 
-        width: 65px; 
-        height: 75px; 
-        padding: 10px; 
-        margin: 5px; 
-        outline: none; 
-        background-color: transparent;
-        font-size: 30px;
-        color: white;
-    }
-
-</style>
-
 <body>
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+
+    <strong>FYI</strong> 
+    <br>
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class = 'container game-container '>
+    <div class="hint">
+      <button id="hintButton" class="btn btn-primary">Hint</button>
+      <p id="hintText" class="mt-3" style="display: none;">{{ hint }}</p>
+    </div>  
 
     <div class = 'images-content container'>
-
         <h2 class = 'text'>
-            Attempt <span id="attempt-counter">1</span>
+            Attempt <span id="attempt-counter"></span>
         </h2>
 
         <div>
             <div class="row">
               <div class="col-6 image-cell" id = 'img1'>
-                <img src="{{ image1 }}" alt="Duck">
+                <img src="{{ image1 }}" alt="image1">
               </div>
               <div class="col-6 image-cell" id = 'img2'>
-                <img src="{{ image2 }}" alt="Duck">
+                <img src="{{ image2 }}" alt="image2">
               </div>
             </div>
             <div class="row">
               <div class="col-6 image-cell" id = 'img3'>
-                <img src="{{ image3 }}" alt="Duck">
+                <img src="{{ image3 }}" alt="image3">
               </div>
               <div class="col-6 image-cell" id = 'img4'>
-                <img src="{{ image4 }}" alt="Duck">
+                <img src="{{ image4 }}" alt="image4">
               </div>
             </div>
           </div>
-        
+
         <div class = 'word-enter-title text' style = 'text-align: center;'>
             Take a Guess
         </div>
@@ -129,6 +82,7 @@
             <button onclick = "makeGuess()" class="btn btn-primary" id="make-guess">Guess</button>
         </div>
     </div>
+  </div>
     
 </body>
 
