--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
 
     <style>
@@ -24,6 +24,7 @@
 </head>
 <body>
     {% include "/html_components/navbar.html" %}
+    
     <!-- Button trigger modal -->
     <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
         Login
@@ -50,12 +51,25 @@
                 $(this).parent().parent().css('width', '36vw');
             });
     
-            // Set 'aria-current' attribute for active nav links
-            document.querySelectorAll('.nav-link').forEach(link => {
-                if (link.href === window.location.href) {
-                    link.setAttribute('aria-current', 'page');
+            //Set 'aria-current' attribute for active nav links
+            
+        document.addEventListener("DOMContentLoaded",function(){
+            const currentLocation = location.href
+            console.log(currentLocation)
+            const menu = document.querySelectorAll('a.nav-link')
+            const length = menu.length
+            
+            for(let i =0; i < length; i++){
+                if(menu[i].href === currentLocation){
+                    menu[i].classList.add("active")
+                    menu[i].setAttribute('aria-current','page')
                 }
-            });
+                else{
+                   menu[i].classList.remove("active")
+                   menu[i].removeAttribute('aria-current')
+                }
+            }
+        })
     
             // New code: Check for 'login' query parameter and show modal if it's true
             var urlParams = new URLSearchParams(window.location.search);
