added additional styles for the navbar as it needs to look a little diff on homepage/index page compaired to challenges page, removed search bar from the navbar also had to change the size of the left margin

--- a/4pics1word/static/css/nav-bar.css
+++ b/4pics1word/static/css/nav-bar.css
@@ -85,6 +85,9 @@ i{
         /* color: #b5b5b5!important;  */
         color: var(--bs-nav-link-color)!important;
     }
+    .index-page{
+        margin-left: 2vw!important;
+    }
 }
 .dropdown-menu{
     text-align: center!important;
@@ -125,4 +128,10 @@ i{
 
 .index-page {
     margin-left: 2vw !important;
+}
+
+@media (min-width:992px){
+    .index-page{
+        margin-left: 40vw!important;
+    }
 }
