--- a/4pics1word/templates/html_components/navbar.html
+++ b/4pics1word/templates/html_components/navbar.html
@@ -13,7 +13,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     {% if is_index %}
-    <div class="collapse navbar-collapse justify-content-end index-page" id="navbarSupportedContent" style="margin-left: 2vw;">
+    <div class="collapse navbar-collapse justify-content-end index-page" id="navbarSupportedContent">
     {% else %}
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" style="margin-left: 2vw;">
     {%endif%}
