Made the game play page to have the same look as the challenges page.

--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/game_attempt.css') }}">
 </head>
 <body>
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <div id = "alert" class="alert alert-warning alert-dismissible fade show" role="alert">
 
     <strong>FYI</strong> 
     <br>
