--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -1,6 +1,7 @@
 body {
-    background: rgb(176,92,241);
-    background: radial-gradient(circle, rgba(176,92,241,1) 0%, rgba(114,26,250,1) 100%);
+    background-image: radial-gradient( circle farthest-corner at 14.2% 27.5%,  rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90% );
+    /* background: rgb(176,92,241);
+    background: radial-gradient(circle, rgba(176,92,241,1) 0%, rgba(114,26,250,1) 100%); */
     width: 100%;
     height: 100%;
 }
