--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/homepage.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 
     <style>
         .form-control.is-valid, .was-validated .form-control:valid {
@@ -25,16 +29,55 @@
 <body>
     {% include "/html_components/navbar.html" %}
     
-    <!-- Button trigger modal -->
-    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
-        Login
-    </button> -->
-
-    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registerModal">
-        Register
-    </button> -->
-    
     {% include "/html_components/auth_modal.html" %}
+
+    <div class="container-fluid full-page-intro text-center">
+        <div class="row justify-content-center align-items-center" style="height: 100%;">
+            <div class="col-md-6">
+                <h1 class="display-3 fw-bold">4Pics1Word</h1>
+                <h3 class="fw-normal text-muted mb-3">Prove Your Puzzle Solving Skills</h3>
+            </div>
+        </div>
+    </div>
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6" data-aos="fade-right">
+                    <h3 class="fw-normal text-muted mb-3">Join thousands of players in this fun and challenging game. Analyze the four images and guess the phrase that links all the images together. Challenge friends to guess your phrases or try and beat other peoples challenges! Are you up for the challenge?</h3>
+                </div>
+                <div class="col-md-6" data-aos="fade-up">
+                    <img src="https://source.unsplash.com/random/600x400/?game" alt="4Pics1Word Game" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6" data-aos="fade-left" data-aos-offset="300" data-aos-duration="2000">
+                    <div class="row">
+                        <div class="col-6" data-aos="fade-down-right" data-aos-offset="300" data-aos-duration="2000">
+                            <img src="https://source.unsplash.com/random/300x200/?game" alt="Game Image 1" class="img-fluid">
+                        </div>
+                        <div class="col-6" data-aos="fade-down-left" data-aos-offset="300" data-aos-duration="2000">
+                            <img src="https://source.unsplash.com/random/300x200/?puzzle" alt="Game Image 2" class="img-fluid">
+                        </div>
+                        <div class="col-6" data-aos="fade-up-right" data-aos-offset="300" data-aos-duration="2000">
+                            <img src="https://source.unsplash.com/random/300x200/?strategy" alt="Game Image 3" class="img-fluid">
+                        </div>
+                        <div class="col-6" data-aos="fade-up-left" data-aos-offset="300" data-aos-duration="2000">
+                            <img src="https://source.unsplash.com/random/300x200/?boardgame" alt="Game Image 4" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6" data-aos="fade-right" data-aos-delay="300">
+                    <h1 class="display-3 fw-bold">How to Play</h1>
+                    <p class="lead">Login. Create a game. Choose a title, upload your 4 pictures and choose a word that relates them all together and give everyone a hint to guess the phrase to your challenge.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
         window.onload = function(){
             var loginmodal = "{{login_modal}}";
@@ -76,6 +119,9 @@
                 $('#loginModal').modal('show');
             }
         });
+    </script>
+    <script>
+        AOS.init();
     </script>
     
 </body>
