--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -1,118 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/nav-bar.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/styles.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/homepage.css')}}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script defer src = "{{url_for('static', filename = 'js/login-validation.js')}}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script defer src="{{url_for('static', filename = 'js/login-validation.js')}}"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
 
 
     <style>
-        .form-control.is-valid, .was-validated .form-control:valid {
+        .form-control.is-valid,
+        .was-validated .form-control:valid {
             background-image: none;
         }
-        .form-control.is-invalid, .was-validated .form-control:invalid {
+
+        .form-control.is-invalid,
+        .was-validated .form-control:invalid {
             background-image: none;
         }
     </style>
 
     <title>Document</title>
 </head>
+
 <body>
     {% include "/html_components/navbar.html" %}
-    
+
     {% include "/html_components/auth_modal.html" %}
 
     <div class="container-fluid full-page-intro text-center">
+        <div id="particles-js" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
         <div class="row justify-content-center align-items-center" style="height: 100%;">
             <div class="col-md-6">
-                <h1 class="display-3 fw-bold">4Pics1Word</h1>
-                <h3 class="fw-normal text-muted mb-3">Prove Your Puzzle Solving Skills</h3>
+                <h1 class="display-3 intro-title fw-bold">4Pics1Word</h1>
+                <h3 class="fw-normal mb-3">Prove Your Puzzle Solving Skills</h3>
             </div>
         </div>
     </div>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
+
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 mb-5 text-center">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6" data-aos="fade-right">
-                    <h3 class="fw-normal text-muted mb-3">Join thousands of players in this fun and challenging game. Analyze the four images and guess the phrase that links all the images together. Challenge friends to guess your phrases or try and beat other peoples challenges! Are you up for the challenge?</h3>
-                </div>
+            <div class="row justify-content-center align-items-center">
                 <div class="col-md-6" data-aos="fade-up">
-                    <img src="https://source.unsplash.com/random/600x400/?game" alt="4Pics1Word Game" class="img-fluid">
+                    <h1 class="display-3 fw-bold fs-1">Guess the phrase!</h1>
+                    <h2 class="fw-normal text-muted mb-3">Analyze four images and guess the phrase that links the images
+                        together. Challenge friends to guess your phrases or try and beat other peoples challenges! Are
+                        you up for the challenge?</h2>
+                </div>
+                <div class="col-md-6" data-aos="fade-up" data-aos-offset="-50">
+                    <img src="https://source.unsplash.com/random/500x300/?game" alt="4Pics1Word Game" class="img-fluid">
                 </div>
             </div>
         </div>
     </div>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
+
+    <div class="col-md-10 offset-md-1 how-to-play overflow-hidden p-5 text-center">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6" data-aos="fade-left" data-aos-offset="300" data-aos-duration="2000">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-6">
                     <div class="row">
-                        <div class="col-6" data-aos="fade-down-right" data-aos-offset="300" data-aos-duration="2000">
-                            <img src="https://source.unsplash.com/random/300x200/?game" alt="Game Image 1" class="img-fluid">
+                        <div class="col-6" data-aos="fade-down-right" data-aos-offset="300" data-aos-duration="1500">
+                            <img src="https://source.unsplash.com/random/300x200/?game" alt="Game Image 1"
+                                class="img-fluid">
                         </div>
-                        <div class="col-6" data-aos="fade-down-left" data-aos-offset="300" data-aos-duration="2000">
-                            <img src="https://source.unsplash.com/random/300x200/?puzzle" alt="Game Image 2" class="img-fluid">
+                        <div class="col-6" data-aos="fade-down-left" data-aos-offset="350" data-aos-duration="1500">
+                            <img src="https://source.unsplash.com/random/300x200/?puzzle" alt="Game Image 2"
+                                class="img-fluid">
                         </div>
-                        <div class="col-6" data-aos="fade-up-right" data-aos-offset="300" data-aos-duration="2000">
-                            <img src="https://source.unsplash.com/random/300x200/?strategy" alt="Game Image 3" class="img-fluid">
+                        <div class="col-6" data-aos="fade-up-right" data-aos-offset="200" data-aos-duration="1500">
+                            <img src="https://source.unsplash.com/random/300x200/?strategy" alt="Game Image 3"
+                                class="img-fluid">
                         </div>
-                        <div class="col-6" data-aos="fade-up-left" data-aos-offset="300" data-aos-duration="2000">
-                            <img src="https://source.unsplash.com/random/300x200/?boardgame" alt="Game Image 4" class="img-fluid">
+                        <div class="col-6" data-aos="fade-up-left" data-aos-offset="100" data-aos-duration="1500">
+                            <img src="https://source.unsplash.com/random/300x200/?boardgame" alt="Game Image 4"
+                                class="img-fluid">
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-right" data-aos-delay="300">
-                    <h1 class="display-3 fw-bold">How to Play</h1>
-                    <p class="lead">Login. Create a game. Choose a title, upload your 4 pictures and choose a word that relates them all together and give everyone a hint to guess the phrase to your challenge.</p>
+                    <h1 class="display-3 fw-bold fs-1">How to Play</h1>
+                    <h2 class="lead fs-4">Login. Create a game. Choose a title, upload your 4 pictures and choose a word that
+                        relates them all together and give everyone a hint to guess the phrase to your challenge.</h2>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 mb-5 text-center">
+        <div class="container">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-6" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1500">
+                    <h1 class="display-3 fw-bold fs-1">Explore Challenges!</h1>
+                    <h2 class="lead fs-4">Visit the challenges page in the navigation bar to find
+                        trending posts as well as all the challenges users have posted!</h2>
+                </div>
+                <div class="col-md-6" data-aos="fade-left" data-aos-offset="300" data-aos-duration="1500">
+                    <img src="https://source.unsplash.com/random/500x300/?car" alt="4Pics1Word Game" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="text-center bg-light py-3">
+        <div class="container">
+            <p class="mb-0">2024 4Pics1Word. Pretty sure rights are not reserved.</p>
+        </div>
+    </footer>
+
     <script>
-        window.onload = function(){
+        window.onload = function () {
             var loginmodal = "{{login_modal}}";
-            if(loginmodal){
+            if (loginmodal) {
                 $('#loginmodal').modal('show');
             }
         };
 
-        $(document).ready(function() {
+        $(document).ready(function () {
             // Trigger search box resize on focus/blur
-            $('.search-box input').focus(function() {
+            $('.search-box input').focus(function () {
                 $(this).parent().parent().css('width', '40vw');
-            }).blur(function() {
+            }).blur(function () {
                 $(this).parent().parent().css('width', '36vw');
             });
-    
-        //Set 'aria-current' attribute for active nav links
-        document.addEventListener("DOMContentLoaded",function(){
-            const currentLocation = location.href
-            console.log(currentLocation)
-            const menu = document.querySelectorAll('a.nav-link')
-            const length = menu.length
-            
-            for(let i =0; i < length; i++){
-                if(menu[i].href === currentLocation){
-                    menu[i].classList.add("active")
-                    menu[i].setAttribute('aria-current','page')
+
+            //Set 'aria-current' attribute for active nav links
+            document.addEventListener("DOMContentLoaded", function () {
+                const currentLocation = location.href
+                console.log(currentLocation)
+                const menu = document.querySelectorAll('a.nav-link')
+                const length = menu.length
+
+                for (let i = 0; i < length; i++) {
+                    if (menu[i].href === currentLocation) {
+                        menu[i].classList.add("active")
+                        menu[i].setAttribute('aria-current', 'page')
+                    }
+                    else {
+                        menu[i].classList.remove("active")
+                        menu[i].removeAttribute('aria-current')
+                    }
                 }
-                else{
-                   menu[i].classList.remove("active")
-                   menu[i].removeAttribute('aria-current')
-                }
-            }
-        })
-    
+            })
+
             // New code: Check for 'login' query parameter and show modal if it's true
             var urlParams = new URLSearchParams(window.location.search);
             if (urlParams.get('login') === 'true') {
@@ -120,9 +164,121 @@
             }
         });
     </script>
+
     <script>
         AOS.init();
     </script>
     
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            particlesJS('particles-js', {
+                "particles": {
+                    "number": {
+                        "value": 237,
+                        "density": {
+                            "enable": true,
+                            "value_area": 800
+                        }
+                    },
+                    "color": {
+                        "value": "#ffffff"
+                    },
+                    "shape": {
+                        "type": "circle",
+                        "stroke": {
+                            "width": 0,
+                            "color": "#000000"
+                        },
+                        "polygon": {
+                            "nb_sides": 5
+                        },
+                        "image": {
+                            "src": "img/github.svg",
+                            "width": 100,
+                            "height": 100
+                        }
+                    },
+                    "opacity": {
+                        "value": 1,
+                        "random": true,
+                        "anim": {
+                            "enable": true,
+                            "speed": 1,
+                            "opacity_min": 0,
+                            "sync": false
+                        }
+                    },
+                    "size": {
+                        "value": 3,
+                        "random": true,
+                        "anim": {
+                            "enable": false,
+                            "speed": 4,
+                            "size_min": 0.3,
+                            "sync": false
+                        }
+                    },
+                    "line_linked": {
+                        "enable": false
+                    },
+                    "move": {
+                        "enable": true,
+                        "speed": 1,
+                        "direction": "none",
+                        "random": true,
+                        "straight": false,
+                        "out_mode": "out",
+                        "bounce": false,
+                        "attract": {
+                            "enable": false,
+                            "rotateX": 600,
+                            "rotateY": 600
+                        }
+                    }
+                },
+                "interactivity": {
+                    "detect_on": "canvas",
+                    "events": {
+                        "onhover": {
+                            "enable": true,
+                            "mode": "bubble"
+                        },
+                        "onclick": {
+                            "enable": true,
+                            "mode": "repulse"
+                        },
+                        "resize": true
+                    },
+                    "modes": {
+                        "grab": {
+                            "distance": 400,
+                            "line_linked": {
+                                "opacity": 1
+                            }
+                        },
+                        "bubble": {
+                            "distance": 250,
+                            "size": 0,
+                            "duration": 2,
+                            "opacity": 0,
+                            "speed": 3
+                        },
+                        "repulse": {
+                            "distance": 400,
+                            "duration": 0.4
+                        },
+                        "push": {
+                            "particles_nb": 4
+                        },
+                        "remove": {
+                            "particles_nb": 2
+                        }
+                    }
+                },
+                "retina_detect": true
+            });
+        });
+    </script>
 </body>
+
 </html>
